2001-06-08  Ben Wing  <ben@xemacs.org>

	* process.el: comment about shell-command-switch.
	* process.el (shell-quote-argument): Need to quote a null
	argument, too.  From Dan Holmsand.
	
	* startup.el (normal-top-level): Delete some unused FSF junk.
	* startup.el (command-line-early):
	
	* startup.el (command-line): Call MS Windows init function.
	
	* win32-native.el:
	* win32-native.el (mswindows-system-shells): New.
	* win32-native.el (mswindows-system-shell-p): New.
	* win32-native.el (init-mswindows-at-startup): New.
	* win32-native.el (mswindows-quote-one-vc-runtime-arg):
	* win32-native.el (mswindows-quote-one-simple-arg):
	* win32-native.el (mswindows-quote-one-command-arg):
	* win32-native.el (mswindows-construct-process-command-line-alist):
	Correct comments at top.  Correctly handle passing arguments
	to Cygwin programs and to bash.  Fix quoting of zero-length
	arguments (from Dan Holmsand).  Set shell-command-switch based
	on shell-file-name, which in turn comes from env var SHELL.

2001-06-03  William M. Perry  <wmperry@gnu.org>

	* dialog-gtk.el (popup-builtin-open-dialog): Yikes - don't forget
	to return the filename!

	* font.el (font-window-system-mappings): Add gtk entry - just an
	alias to the X code)

2001-06-02  William M. Perry  <wmperry@gnu.org>

	* gtk-marshal.el: Fix for removing of the string_hash utility
	functions in hash.c

2001-05-13  Karl M. Hegbloom  <karlheg@hegbloom.net>

	* packages.el (locate-data-file): Use suffixes list to allow
	finding compressed copies of the data files.

2001-05-30  Ben Wing  <ben@xemacs.org>

	* etags.el (buffer-tag-table-list):
	Fix infloop when going up to the root.

2001-05-30  William M. Perry  <wmperry@gnu.org>

	* gtk-marshal.el: Make sure that we use 'const' instead of 'CONST'
	in the generated file.  Put in a comment at the top of the
	generated file that it _IS_ auto-generated, and should not be
	edited by hand.
	

	* gtk-widget-accessors.el (define-widget-accessors): Use